2006-11-19  Stipe Tolj  <stolj at kannel.org>
	* gw/bearerbox.c: resolves bug #369 by adding warning() calls for 
	  --disable-sms or --disable-wap functions, so users are aware 
	  that the function range is limited. Thanks to Martin for this patch. 
	  Some more source code beauty via indention. NLC.
	  
2006-11-18  Stipe Tolj  <stolj at kannel.org>
    * wap/wsp_headers.c: re-adding quote char (") recognizing within the 
      wsp_field_value() that isolates header values. Thanks again to Paul.
      [Msg-Id: <D594FE8B-729D-4183-BCFA-3337FE547D37@dsmagic.com>]
      
2006-11-18  Stipe Tolj  <stolj at kannel.org>
    * gwlib/mime.c: fixing bug causing segfault due to destroyed, but then
      reused Octstr pointer. Thanks to Paul for spotting this.
      [Msg-Id: <E1F2DA11-C90B-49F5-9DC7-6481F44D14C7@dsmagic.com>]

2006-11-18  Stipe Tolj  <stolj at kannel.org>
    * configure[.in]: add /usr/lib64 search path within --with-ssl block, 
      ie. FC5 on x64_64 has that lib64 layout for devel import libs.
       
2006-11-17  Stipe Tolj  <stolj at kannel.org>
    * gw/smsbox.c: allow empty message responses.
      Thanks to Colin Pitrat <colin.pitrat@bull.net> for this patch.
      [Msg-Id: <44BCDE02.4090000@bull.net>]
      
2006-11-17  Stipe Tolj  <stolj at kannel.org>
    * gw/wap_push_ppg.c: adding support to pass the 'from' source addr via
      X-Kannel-From HTTP header in the PPG request.
      Thanks to Christian Boustany <noorentertainment@yahoo.com> for this patch.
      
2006-11-17  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: section describing the new 'interactive' mode
      for fakesmsc.
    * test/fakesmsc.c: adding 'interactive' mode via stdin and stdout to allow
      a more human like interaction with the fake smsc module.
      Thanks to Alejandro Guerrieri <alejandro.guerrieri@gmail.com> for patch.
      [Msg-Id: <cd6a81510610032000s2799a2c5uc2a255b15c53e899@mail.gmail.com>]

2006-11-13  Stipe Tolj  <stolj at kannel.org>