@@ -1,4 +1,10 @@
 2006-11-19  Stipe Tolj  <stolj at kannel.org>
+    * configure[.in]: fixing bug #368 to support Oracle 10g, via 10.x instant 
+      client libs and headers. Thanks to Martin.
+    * gw/shared.c: added sqlite3 version output to version preamble, added
+      Oracle OCI version output.
+   
+2006-11-19  Stipe Tolj  <stolj at kannel.org>
 	* gw/bearerbox.c: resolves bug #369 by adding warning() calls for 
 	  --disable-sms or --disable-wap functions, so users are aware 
 	  that the function range is limited. Thanks to Martin for this patch. 
